--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -977,7 +977,7 @@
 		Italian:"Consente le rotte commerciali marittime"
 		French:"Connecter des routes commerciales maritimes"
 		Romanian:"Leagă rute comerciale pe apă"
-		Simplified_Chinese:"连接水上贸易路线"
+		Simplified_Chinese:"通过水路连接贸易路线"
 		Portuguese:"Conecta rotas comerciais pela água"
 		German:"Verbindet Handelsrouten über Wasser"
 		Polish:"Tworzy wodne szlaki handlowe"
