Resolved #1234 - improvements that replace the current improvement now indicated in the improvement picker screen

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -851,6 +851,12 @@
 		Czech:"Zvolte vylepšení"
 }
 
+	"Provides [resource]":{
+	}
+	
+	"Replaces [improvement]":{
+	}
+
 	"Pick now!": { //sample needed
 		Italian: "Scegli ora!"
 		German: "Jetzt wählen!"
