--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -1427,7 +1427,7 @@
 		Italian:"Le unità possono imbarcarsi e attraversare gli oceani fin da subito, e ricevono +1 Visione quando imbarcate, e +10% Forza entro 2 caselle con un Moai."
 		Portuguese:"Pode embarcar e mover unidades sobre oceanos imediatamente. +1 visão quando embarcado"
 		French:"Peut embarquer et bouger sur les océans dès le début. +1 Vision lorsque embarqué."
-		Czech:"Může se okamžitě přesunovat mezi pevninou a mořem. +1 při nalodění. +10% bonus k bojové síle, pokud je v okolí 2 polí Moai."
+		Czech:"Může se okamžitě přesunovat mezi pevninou a oceánem. +1 při nalodění. +10% bonus k bojové síle, pokud je v okolí 2 polí Moai."
 		Simplified_Chinese:"单位初始就拥有船运能力，可进入海滨和海洋地块，单位处于船运状态时+1视野。摩艾石像群周围2格内单位+10%战斗力"
 }
 
